source posts backup

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-push.sh
-c.sh
-~                                                                                                                                                                                                           
-~  
+.DS_Store
+Thumbs.db
+db.json
+*.log
+node_modules/
+public/
+.deploy*/
