--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "build": "hexo generate",
+    "clean": "hexo clean",
+    "deploy": "hexo deploy",
+    "server": "hexo server"
+  },
+  "hexo": {
+    "version": "5.4.0"
+  },
   "dependencies": {
-    "hexo-deployer-git": "^3.0.0"
+    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
+    "hexo": "^5.0.0",
+    "hexo-admin-qiniu": "^2.2.0",
+    "hexo-deployer-git": "^3.0.0",
+    "hexo-generator-archive": "^1.0.0",
+    "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
+    "hexo-generator-search": "^2.4.3",
+    "hexo-generator-tag": "^1.0.0",
+    "hexo-renderer-ejs": "^1.0.0",
+    "hexo-renderer-pug": "^2.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
+    "hexo-server": "^2.0.0",
+    "hexo-wordcount": "^6.0.1"
   }
 }
